# glad

./: CMakeLists.txt  LICENSE
include/GLAD/: glad.h
src/: glad.c
